--- a/csstd.css
+++ b/csstd.css
@@ -10,3 +10,11 @@
     left: 0;
     right: 0;
 }
+
+.info{
+    position: absolute;
+    left:0;
+    top: 0;
+    width: 400px;
+    display: none;
+}
