--- a/csstd.css
+++ b/csstd.css
@@ -1,14 +1,25 @@
+html, body {
+    font-family: "Helvetica","Arial",sans-serif;
+    font-size: 19px !important;;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+}
+.padding{
+
+padding: 50px;
+}
 #Canvas{
     padding: 0;
     margin: auto;
     display: block;
-    width: 650px;
-    height: 650px;
-    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+}
+.button-start{
+    padding-bottom:  50px;
 }
 
 .info{
@@ -17,4 +28,30 @@
     top: 0;
     width: 400px;
     display: none;
+}
+.alert {
+    padding: 20px;
+    color: white;
+    opacity: 1;
+    transition: opacity 0.6s;
+    margin-bottom: 15px;
+}
+
+.alert {background-color: #4CAF50;}
+.alert.objjeu {background-color: #2196F3;}
+.alert.controlejeu {background-color: #ff9800;}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
 }
